recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: value montre is not a member of Int
possible cause: maybe a semicolon is missing before `value montre'?
  montre()
  ^FourSquare:7: error: not found: value droit
  droit(angle)
  ^FourSquare:9: error: not found: value droit
  droit(angle)
  ^FourSquare:11: error: not found: value droit
  droit(angle)
  ^